{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 7,
  "lineage": "28d7f7c2-6abb-afdd-ba42-f0294a101d92",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:154368581375:internet-gateway/igw-059a3ed9eaf537491",
            "id": "igw-059a3ed9eaf537491",
            "owner_id": "154368581375",
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0ca1458e4e0699161"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-084b6e89f6f03b380",
            "owner_id": "154368581375",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059a3ed9eaf537491",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0ca1458e4e0699161"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9dc64237892183b",
            "route_table_id": "rtb-084b6e89f6f03b380",
            "subnet_id": "subnet-0c500cb77f35a3a0e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22_80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:154368581375:security-group/sg-08e9023a7955e163c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e9023a7955e163c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_22",
            "name_prefix": null,
            "owner_id": "154368581375",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca1458e4e0699161"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:154368581375:subnet/subnet-0c500cb77f35a3a0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0c500cb77f35a3a0e",
            "map_public_ip_on_launch": true,
            "owner_id": "154368581375",
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0ca1458e4e0699161"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:154368581375:vpc/vpc-0ca1458e4e0699161",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0952e00b22b754c80",
            "default_route_table_id": "rtb-050afb334b3b4100c",
            "default_security_group_id": "sg-004209cc99567f18c",
            "dhcp_options_id": "dopt-af1f46c9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ca1458e4e0699161",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050afb334b3b4100c",
            "owner_id": "154368581375",
            "tags": {
              "Environment": "Production"
            }
          }
        }
      ]
    }
  ]
}